@@ -1,4 +1,4 @@
-Copyright (c) 2014, Martin
+Copyright (c) 2014, Martin Wolf
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
