@@ -64,11 +64,11 @@ class ConstantBinWidthAxis
 
     ConstantBinWidthAxis(
         bn::ndarray const & edges
-      , std::string const & label=std::string("")
-      , std::string const & name=std::string("")
-      , bool is_extendable=false
-      , intptr_t extension_max_fcap=0
-      , intptr_t extension_max_bcap=0
+      , std::string const & label
+      , std::string const & name
+      , bool is_extendable
+      , intptr_t extension_max_fcap
+      , intptr_t extension_max_bcap
     )
       : Axis(
             edges
