@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
-export PYTHONPATH=@CMAKE_LIBRARY_OUTPUT_DIRECTORY@:${PYTHONPATH}
+export PYTHONPATH=@CMAKE_BINARY_DIR@/python:${PYTHONPATH}
 /usr/bin/env python $1
